--- a/app/src/main/res/layout/activity_super_admin_historial_ventas_detalles.xml
+++ b/app/src/main/res/layout/activity_super_admin_historial_ventas_detalles.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".SuperAdminFragments.HistorialVentasDetalles">
+    tools:context=".SuperAdmin.SuperAdminHistorialVentasDetalles">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -214,227 +214,12 @@
                         android:textColor="@color/black" />
 
                 </LinearLayout>
-                <ScrollView
-                    android:layout_width="400sp"
-                    android:layout_height="286dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginStart="10sp"
-                    android:layout_marginEnd="10sp">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="290dp"
-                        android:orientation="vertical">
-
-
-
-                        <com.google.android.material.card.MaterialCardView
-                            android:id="@+id/card1"
-                            style="?attr/materialCardViewElevatedStyle"
-                            android:layout_width="365sp"
-                            android:layout_height="130sp"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.516"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="110sp"
-                                    android:layout_height="130sp"
-                                    android:scaleType="centerCrop"
-                                    app:srcCompat="@drawable/hamburguesa_royal" />
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical"
-                                    android:padding="10dp">
-
-
-
-                                    <TextView
-                                        android:layout_marginTop="30dp"
-
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="Combo platano"
-                                        android:textStyle="bold"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="S/15.40"
-                                        android:textStyle="bold"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium" />
-
-                                    <TextView
-                                        android:layout_marginStart="150dp"
-                                        android:layout_marginTop="10dp"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="Cantidad: 4"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium"
-                                        android:textColor="@color/white"
-                                        android:textStyle="bold"
-                                        android:background="@color/light_green"
-                                        android:textColorHighlight="@color/light_green" />
-
-                                </LinearLayout>
-
-                            </LinearLayout>
-                        </com.google.android.material.card.MaterialCardView>
-
-                        <com.google.android.material.card.MaterialCardView
-                            android:id="@+id/card2"
-                            style="?attr/materialCardViewElevatedStyle"
-                            android:layout_width="365sp"
-                            android:layout_height="130sp"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.516"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="110sp"
-                                    android:layout_height="130sp"
-                                    android:scaleType="centerCrop"
-                                    app:srcCompat="@drawable/hamburguesa_royal" />
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical"
-                                    android:padding="10dp">
-
-
-
-                                    <TextView
-                                        android:layout_marginTop="30dp"
-
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="Combo platano"
-                                        android:textStyle="bold"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="S/15.40"
-                                        android:textStyle="bold"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium" />
-
-                                    <TextView
-                                        android:layout_marginStart="150dp"
-                                        android:layout_marginTop="10dp"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="Cantidad: 1"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium"
-                                        android:textColor="@color/white"
-                                        android:textStyle="bold"
-                                        android:background="@color/light_green"
-                                        android:textColorHighlight="@color/light_green" />
-
-                                </LinearLayout>
-
-                            </LinearLayout>
-                        </com.google.android.material.card.MaterialCardView>
-
-                        <com.google.android.material.card.MaterialCardView
-                            android:id="@+id/card3"
-                            style="?attr/materialCardViewElevatedStyle"
-                            android:layout_width="365sp"
-                            android:layout_height="130sp"
-                            android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.516"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <ImageView
-                                    android:layout_width="110sp"
-                                    android:layout_height="130sp"
-                                    android:scaleType="centerCrop"
-                                    app:srcCompat="@drawable/hamburguesa_royal" />
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical"
-                                    android:padding="10dp">
-
-
-
-                                    <TextView
-                                        android:layout_marginTop="30dp"
-
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="Combo platano"
-                                        android:textStyle="bold"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="S/15.40"
-                                        android:textStyle="bold"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium" />
-
-                                    <TextView
-                                        android:layout_marginStart="150dp"
-                                        android:layout_marginTop="10dp"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:fontFamily="sans-serif-condensed"
-                                        android:text="Cantidad: 1"
-                                        android:textAppearance="?attr/textAppearanceTitleMedium"
-                                        android:textColor="@color/white"
-                                        android:textStyle="bold"
-                                        android:background="@color/light_green"
-                                        android:textColorHighlight="@color/light_green" />
-
-                                </LinearLayout>
-
-
-                            </LinearLayout>
-                        </com.google.android.material.card.MaterialCardView>
-
-
-                    </LinearLayout>
-
-
-                </ScrollView>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/listVentas"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp" />
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cardResumen"
@@ -442,7 +227,7 @@
                     android:layout_width="365sp"
                     android:layout_height="130sp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="4dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.516"
                     app:layout_constraintStart_toStartOf="parent"
@@ -505,6 +290,18 @@
 
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.bottomnavigation.BottomNavigationView
+                    android:id="@+id/bottom_navigation"
+                    android:layout_width="425dp"
+                    android:layout_height="120dp"
+                    app:layout_anchorGravity="bottom|center"
+                    app:layout_constraintBottom_toBottomOf="@id/linearLayout"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:menu="@menu/bottom_navigation_superadmin"
+                    tools:layout_editor_absoluteX="-14dp"
+                    tools:layout_editor_absoluteY="578dp" />
 
             </LinearLayout>
         </LinearLayout>
