--- a/app/src/main/res/layout/activity_super_admin_repartidor.xml
+++ b/app/src/main/res/layout/activity_super_admin_repartidor.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".SuperAdmin.SuperAdminHomeActivity">
+    tools:context=".SuperAdmin.SuperAdminRepartidor">
 
     <!--
     <com.google.android.material.appbar.AppBarLayout
@@ -213,7 +213,7 @@
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/listClientesRecyler"
+                    android:id="@+id/listRepartidor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp" />
@@ -222,22 +222,20 @@
             </LinearLayout>
         </LinearLayout>
 
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="425dp"
+            android:layout_height="120dp"
+            app:layout_anchorGravity="bottom|center"
+            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_navigation_superadmin"
+            tools:layout_editor_absoluteX="-14dp"
+            tools:layout_editor_absoluteY="578dp" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="425dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="617dp"
-        app:layout_anchorGravity="bottom|center"
-        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_navigation_superadmin"
-        tools:layout_editor_absoluteX="-14dp"
-        tools:layout_editor_absoluteY="578dp" />
 
 
 
