--- a/app/src/main/res/layout/sup_admin_cliente_list.xml
+++ b/app/src/main/res/layout/sup_admin_cliente_list.xml
@@ -6,8 +6,9 @@
     android:layout_width="369dp"
     android:layout_height="100dp"
     android:layout_marginStart="16dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="14dp"
     android:layout_marginEnd="16dp"
+    android:layout_marginBottom="6dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.075"
@@ -81,7 +82,7 @@
                     android:contentDescription="Información"
                     android:onClick="vistaPerfilCliente"
                     app:backgroundTint="@color/light_yellow"
-                    app:srcCompat="@drawable/baseline_preview_24"
+                    app:srcCompat="@drawable/baseline_eye_24"
                     app:tint="@color/white" />
 
             </LinearLayout>
