--- a/app/src/main/res/menu/bottom_navigation_superadmin.xml
+++ b/app/src/main/res/menu/bottom_navigation_superadmin.xml
@@ -6,7 +6,7 @@
         android:id="@+id/restaurant"
         android:enabled="true"
         android:icon="@drawable/storefront"
-        android:title="Registro"
+        android:title="Restaurantes"
         />
 
     <item
